com-at/build/log/idf_py_stderr_output_2555756
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c: In function 'at_handle_mqttconn':
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c:44:22: error: 'struct credentials_t' has no member named 'password'
   44 |         .credentials.password = pass,
      |                      ^~~~~~~~
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c:44:33: warning: initialized field overwritten [-Woverride-init]
   44 |         .credentials.password = pass,
      |                                 ^~~~
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c:44:33: note: (near initialization for 'mqtt_cfg.credentials.username')
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c: At top level:
/home/eunous/git/dvid/com-at/com-at/components/at_mqtt/at_mqtt.c:25:13: warning: 'at_handle_mqttconn' defined but not used [-Wunused-function]
   25 | static void at_handle_mqttconn(const char *params) {
      |             ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/at_mqtt/CMakeFiles/__idf_at_mqtt.dir/build.make:76: esp-idf/at_mqtt/CMakeFiles/__idf_at_mqtt.dir/at_mqtt.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5773: esp-idf/at_mqtt/CMakeFiles/__idf_at_mqtt.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
